@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="BindingEnvironment.cs" />
     <Compile Include="Commands\CompositeCommand.cs" />
+    <Compile Include="Commands\TransactionCommand.cs" />
     <Compile Include="Commands\HostedCommand.cs" />
     <Compile Include="Commands\ExitCommand.cs" />
     <Compile Include="Commands\DefineAgentCommand.cs" />
